# tenepal

./: .gitignore  EVOLUTION.md  LICENSE  PAPER.md  README.md  STATUS.md  VISION.md  eq_comparison_gt.json  eq_default.json  eq_v7_best.json  evaluate.py  pyproject.toml  run_eq_comparison.sh  tenepal_modal.py  tenepal_whisper_train.py
benchmarks/: README.md
docker/: .dockerignore  Dockerfile  diarize_worker.py  healthcheck.py
docs/: AMITH_CORPORA.md  ANNOTATOR_SCREENSHOTS.md  DATA_ACCESS.md  NAHUATL_PATTERNS.md  OPEN_PROBLEMS.md  PUBLIC_RELEASE.md  parselmouth_vs_backends_comparison.md
eq_configs/: 01_v7_best.json  02_v7_prosody.json  03_v7_prosody_gentle.json  04_v7_speaker_tight.json  05_v7_spa_reclaim_loose.json  06_v7_prosody_spa_reclaim.json  07_v7_unk_gate.json  08_v7_two_pass.json  09_v7_two_pass_unk.json  10_v7_ft_first.json  11_v7_three_levers.json  12_v7_full_track.json  13_v7_morphology_expansion.json  14_ipa_dict_only.json  17_v7_overlap_gate.json  18_v7_overlap_separation.json  19_v7_overlap_damping.json
scripts/: ab_test_reclassify.py  allo_bias_sweep.py  allo_debug_parselmouth.py  build_lexicon_from_corpus.py  build_nahuatl_markers_from_maps.py  classify_oth.py  codex_htr_probe.py  compare_llm_models_modal.py  compute_backend_agreement.py  cut_ejective_clips.py  debug_edge_cases.sh  debug_edge_cases_local.sh  debug_edge_cases_modal_focus.sh  debug_modal_name_and_window.sh  detect_tl.py  download_amith_corpus.py  download_validation_audio.py  edge_case_tester.py  ejective_detection_modal.py  eval_modal_backends.sh  export_benchmark_snapshot.py  (+38 more)
(+196 files in other folders)
